crates/model/tests/compile_fail/model_empty.rs
// model! with empty body should fail — requires root resource group.
quent_model::model! {
    App {}
}

fn main() {}
